--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+      <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> <!-- Change to productive version -->
+      
       <title>Einkaufslisten schreiben</title>
    </head>
    <body>
-      <div class="container">
+      <div id='app' class="container">
          <div class="row">
-            <div id="logger" class="col-md-8 col-12"></div>
+             {{ title }}
+            <div id="logger" class="col-md-6 col-12"></div>
             <script type="text/javascript">
                // Overriding console object
                var console = {};
@@ -27,8 +30,9 @@
                    logger.appendChild(element);
                }
             </script>
-            <script src="https://cdn.rawgit.com/crelder/recipe-shoppinglist-generator/master/recipes.js"></script>
-         </div>
+            <script src="./recipes.js"></script> 
+            <div class="col-md-6 col-12"></div>
+        </div>    
       </div>
    </body>
 </html>
