--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-      <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> <!-- Change to productive version -->
-      
+      <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>      
       <title>Einkaufslisten schreiben</title>
    </head>
    <body>
       <div id='app' class="container">
          <div class="row">
-             {{ title }}
+             {{ title }}, {{ test }}
             <div id="logger" class="col-md-6 col-12"></div>
+           <!--
             <script type="text/javascript">
                // Overriding console object
                var console = {};
@@ -29,10 +29,10 @@
                    element.appendChild(txt);
                    logger.appendChild(element);
                }
-            </script>
-            <script src="./recipes.js"></script> 
+            </script> --> 
             <div class="col-md-6 col-12"></div>
         </div>    
       </div>
+      <script src="./recipes.js"></script>
    </body>
 </html>
