--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                <!-- <h1>Einkaufsliste</h1> -->
                <div class="row">
                   <div class="col-md-12">
-                     <span v-for="ingredient in ingredients">{{ ingredient }}<br></span>
+                     <span v-for="x in ingredients">{{ x }}<br></span>
                      <p></p>
                      <p>Damit kann man folgende Rezepte kochen: </p>
                      <p> </p>
