--- a/index.html
+++ b/index.html
@@ -9,33 +9,33 @@
    </head>
    <body>
       <div id="app">
-      <div class="container py-3">
-         <div class="row">
-             <!-- Linke Spalte -->
-            <div id="logger" class="col-md-6">
-               <ul class="list-group list-group-flush">
-                  <my-meal v-for="(recipe, index) in recipes" v-bind:recipe="recipe" v-bind:index="index" v-bind:recipes="recipes"></my-meal>
-               </ul>
-            </div>
-            <!--Rechte Spalte -->
-            <div class="col-md-6">
-               <!-- <h1>Einkaufsliste</h1> -->
-               <div class="row">
-                  <div class="col-md-12">
-                     <span v-for="ingredient in shoppingList">{{ ingredient }}<br></span>
-                     <p></p>
-                     <p>Damit kann man folgende Rezepte kochen: </p>
-                     <p> </p>
-                     <p class="text-uppercase"></p>
-                     <p>Genaue Rezepte aufgelistet</p>
-                      <!-- <p v-for="i in recipes">{{ i }}</p> -->
-                     
+         <div class="container py-3">
+            <div class="row">
+               <!-- Linke Spalte -->
+               <div id="logger" class="col-md-5">
+                  <ul class="list-group list-group-flush">
+                     <my-meal v-for="(recipe, index) in recipes" v-bind:recipe="recipe" v-bind:index="index" v-bind:recipes="recipes"></my-meal>
+                  </ul>
+                  <div class="containter my-5" v-if="shoppingList.length > 0" >
+                     <ul class="list-inline">
+                        <li class="list-inline-item" v-for="recipe in selectedRecipes">{{ recipe.recipeName }}</li>
+                     </ul>
                   </div>
-               </div>                 
+               </div>
+               <div class="col-md-1"></div>
+               <!--Rechte Spalte -->
+               <div class="col-md-6">
+                  <!-- <h1>Einkaufsliste</h1> -->
+                  <div class="row">
+                     <div class="col-md-12" v-if="shoppingList.length > 0">
+                        <ul class="list-unstyled">
+                           <li v-for="item in shoppingList" class="font-weight-normal"> {{ item }}</li>
+                        </ul>
+                     </div>
+                  </div>
+               </div>
             </div>
-         
          </div>
-      </div>
       </div>
       <script src="./recipes.js"></script>
    </body>
