--- a/index.html
+++ b/index.html
@@ -7,47 +7,36 @@
       <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
       <script src="https://cdn.rawgit.com/zenorocha/clipboard.js/v2.0.0/dist/clipboard.min.js"></script>
       <script src="https://cdn.rawgit.com/Inndy/vue-clipboard2/master/dist/vue-clipboard.js"></script>
-      <title>Einkaufslisten schreiben</title>
+      <title>Einkaufsliste schreiben</title>
    </head>
    <body>
       <div id="app">
-         <div class="container py-3 ">
+         <div class="container py-3">
             <div class="row">
                <!-- Linke Spalte -->
-               <div id="logger" class="col-md-5">
+               <div class="col-md-7">
                   <ul class="list-group list-group-flush">
                      <my-meal v-for="(recipe, index) in recipes" v-bind:recipe="recipe" v-bind:index="index" v-bind:recipes="recipes"></my-meal>
                   </ul>
-                  <div class="containter my-5" v-if="shoppingList.length > 0" >
-                     <!-- <ul class="list-inline">
-                        <li class="list-inline-item" v-for="recipe in selectedRecipes">{{ recipe.recipeName }}</li>
-                        </ul> -->
-                     <div class="d-flex justify-content-center">                
-                        <button type="button" class="btn btn-primary"
-                           v-clipboard:copy="clipboardShoppingList"
-                           v-clipboard:success="onCopy"
-                           v-clipboard:error="onError"
-                           >Kopiere Einkaufsliste</button>
-                     </div>
-                  </div>
                </div>
-               <!-- <div class="col-md-1"></div> -->
-               <!--Rechte Spalte -->
-               <!-- <div class="col-md-6"> -->
-               <!-- <h1>Einkaufsliste</h1> -->
-               <!-- <div class="row">
-                  <div class="col-md-12" v-if="shoppingList.length > 0">
-                          -->
-               <!-- <ul class="list-unstyled">
-                  <li v-for="item in shoppingList" class="font-weight-normal"> {{ item }}</li>
-                  </ul> -->
-               <!-- </div>
-                  </div>
-                  </div> -->
+            </div>
+            <div class="row containter mt-5" v-if="shoppingList.length > 0">
+               <div class="col-md-7 text-center">
+                     <button type="button" class="btn btn-primary mr-3"
+                        v-clipboard:copy="clipboardShoppingList"
+                        v-clipboard:success="onCopy"
+                        v-clipboard:error="onError"
+                        >Kopiere Einkaufsliste</button>
+                     <button type="button" class="btn btn-primary"
+                        v-clipboard:copy="clipboardMenues"
+                        v-clipboard:success="onCopy"
+                        v-clipboard:error="onError"
+                        >Kopiere Menüs</button>
+                 
+               </div>
             </div>
          </div>
       </div>
       <script src="./recipes.js"></script>
-      
    </body>
 </html>
