--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                      v-clipboard:copy="clipboardMenues"
                      v-clipboard:success="onCopy"
                      v-clipboard:error="onError"
-                     >Kopiere Menüs</button>
+                     >Kopiere Rezepte</button>
                </div>
             </div>
          </div>
