--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                   </ul>
                </div>
             </div>
-            <div class="row containter justify-content-center" v-if="shoppingList.length > 0">
+            <div class="row container justify-content-center" v-if="shoppingList.length > 0">
                <div class="col-md-6 text-center mt-3">
                   <button type="button" class="btn btn-primary mr-3 mt-3"
                      v-clipboard:copy="clipboardShoppingList"
@@ -36,6 +36,16 @@
                         </div>   
 
             </div>
+            <div class="row container justify-content-center">
+                  <div class="col-md-6 text-center mt-3">
+                        <button class="btn btn-primary mr-3 mt-3">
+                              Rezepte verwalten
+                              <!-- Hier soll dann ein Modal geöffnet werden, wo ich das hinzufügen kann. 
+                                    Alternativ ein neues View mit Vuex. -->
+                        </button>
+                  </div>
+            </div>
+      
          </div>
       </div>
       <script src="./recipes.js"></script>
