--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                      v-clipboard:copy="clipboardShoppingList"
                      v-clipboard:success="onCopy"
                      v-clipboard:error="onError"
-                     >Kopiere Einkaufsliste</button>
+                     >Erstelle Einkaufsliste</button>
                   <button type="button" class="btn btn-primary mr-3 mt-3"
                      v-clipboard:copy="clipboardMenues"
                      v-clipboard:success="onCopy"
                      v-clipboard:error="onError"
-                     >Kopiere Rezepte</button>
+                     >Erstelle Rezepteliste</button>
                         </div>   
 
             </div>
