--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
             <script src="https://cdn.rawgit.com/zenorocha/clipboard.js/v2.0.0/dist/clipboard.min.js"></script>
             <script src="https://cdn.rawgit.com/Inndy/vue-clipboard2/master/dist/vue-clipboard.js"></script>
-            <title>Einkaufsliste schreiben</title>
+            <title>Creating your Shopping List</title>
       </head>
    <body>
       <div id="app">
